app/static/app/app.css
html, body {
  font-family: 'Lato', sans-serif;
  height: 100%;
  color: white;
  overflow: hidden;
}

a, a:hover {
  color: inherit;
  text-decoration: inherit;
}

.force-scrollbar {
  overflow: auto;
}

::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 7px;
}

::-webkit-scrollbar-thumb {
  border-radius: 4px;
  background-color: rgba(0,0,0,.5);
  -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
}

.group-tab-names {
  margin-left: 2%;
  margin-right: 2%
}

.right-shadow {
  -webkit-box-shadow: 10px 0px 17px -10px rgba(0,0,0,0.6);
  -moz-box-shadow: 10px 0px 17px -10px rgba(0,0,0,0.6);
  box-shadow: 10px 0px 17px -10px rgba(0,0,0,0.6);
  z-index: 2;
}

.left-shadow {
  -webkit-box-shadow: -9px 0px 17px -10px rgba(0,0,0,0.6);
  -moz-box-shadow: -9px 0px 17px -10px rgba(0,0,0,0.6);
  box-shadow: -9px 0px 17px -10px rgba(0,0,0,0.6);
}

.bottom-shadow {
  -webkit-box-shadow: 0px 6px 17px -10px rgba(0,0,0,0.6);
  -moz-box-shadow: 0px 6px 17px -10px rgba(0,0,0,0.6);
  box-shadow: 0px 6px 17px -10px rgba(0,0,0,0.6);
}

#logo-footer {
  position:absolute;
  left:0;
  right:0;
  bottom:5%;
  width:100%;
  text-align: center;
}

.hide {
  display: none;
}

.clickable {
  cursor: pointer;
}

.map-container {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
  text-align: center;
  vertical-align: middle;
  display: table-cell;
  z-index: 500;
}

.map {
  background-color:#000\9;
  background-color: rgba(242, 244, 244, .8);
  border: 20px solid #619090 ;
  padding: 15px;
  margin-top: 75px;
  position: relative;
  width: 75%;
  display: inline-block;
  max-height: 80%;
}

.active {
  opacity: 1 !important;
}

.map-button {
  opacity: .5;
  border: 4px solid #EAA327;
  text-align: center;
  display: inline-block;
  border-radius: 100%;
  background-color: white;
  width: 50px;
  height: 50px;
  color: black;
  line-height: 42px;
}

.open-map{
  position:absolute; /* Absolute fixes footer to bottom. */
  left:0;
  right:0;
  padding:10%;
  bottom:2%;
  width:100%;
  text-align: center;
}

.exit-map-button {
  opacity: 1;
  background-color: red;
  color: white;
  font-size: 20px;
}

.active-tab {
  background-color: #92C3D0;
  color: black;
}

.active-tab > a > div > h2 {
  color: black;
}

.screensaver {
  background-color: #4A9AAE;
  height: 100%; width: 100%;
}

a {
  color: white;
}

.black-font {
  color: black;
}

.person-name {
  padding-bottom: 7%;
}

.container, .container-fluid {
  height: 100%;
}

.full-height {
  height: 100%;
}

.tabs-column, .right-column {
  background-color: #23749E;  /*blueish*/
  position: relative;
}

.maps-row {
  width: 100%;
  position: absolute;
  bottom: 0;
  margin-bottom: 15px;
}

.groups-header {
  /*background-color: #FBBC5A;*/
  background-color: #F0F0F0;
  height: 80px;
  border-bottom-color: #FBBC5A;
  border-bottom-width: thick;
  border-bottom-style: solid;
}

.searchbar {
  float: left;
  width: 85%;
  padding-top: 2%;
  display: inline-block;
}

.close-keyboard {
  float: right;
  padding-top: 0.5%;
  color:#D44946;
  display: inline-block;
}

.close-keyboard:hover {
  opacity: 0.5;
}

.person-container {
  padding-top: 2%;
  background: #F0F0F0;
  height: 100%;
  overflow: scroll;
  cursor: grab;
}

.person-container-extra {
  height: 200px;
}

.person-header {
  padding-top: 2%;
  height: 80px;
  font-size: 2vw;
}

.info-header {
  height: 120px;
  margin-top: 7%;
  margin-bottom: 10%;
}

.fa-stack-1x {
  color: #4A9AAE;
}

.person-fields {
  padding-top: 30px;
}

.welcome {
  padding-top: 3%
}

.welcome-icons {
  padding-top: 3%;
}

.touch-to-begin {
  padding-top: 5%;
}

.widget {
  padding-bottom: 20%;
}

.side-video video {
  width: 100%; height: auto;
}

/* crop the video to a square before this and it'll work*/
.circular video {
  overflow: hidden;
  transform-origin: center center;
  -webkit-transform-origin: center center;
  border-radius: 150px!important;
  -webkit-mask-image: url(/s/assets/mask2.svg);
  mask-image: url(/s/assets/mask2.svg);
  -webkit-border-radius: 150px!important;
  -moz-border-radius: 150px!important;
}

.circular-video {
  background-color: black;
  width: 100%;
  padding-bottom: 100%;
  border-radius: 150px;
  position: relative;
  top: 0;
  left: 10px;
  overflow: hidden;
  -webkit-mask-image: -webkit-radial-gradient(circle, white 100%, black 100%);
}

.circular-video video {
  position: absolute;
  width: 100%;
  padding-bottom: 100%;
  left: 0;
}

